# mqtt

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  install.bat  install.sh  makefile  mqtt.c  mqtt.q  travis_setup.sh
.github/workflows/: build_linux.yml  build_mac.yml  build_win.yml
docker_linux/: Dockerfile.alpine  Dockerfile.build  Dockerfile.centos7  build_libpaho.sh  mqtt_build.bat  mqtt_build.sh
docs/: README.md  build.md  examples.md  install.md  reference.md
examples/: README.md  consumer.q  producer.q  receiver.q  symlink_dlls.bat  symlink_paho.bat
q/: mqtt.q
src/: mqtt.c
vs2019/: .gitignore  mqtt.sln  mqtt.vcxproj  mqtt.vcxproj.filters  mqtt_install.bat
